--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Google.Apis.Customsearch.v1" Version="1.45.0.1369" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+  </ItemGroup>
+
 </Project>
