--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -22,4 +22,11 @@ jobs:
     - name: Build
       run: dotnet build --configuration Release --no-restore
     - name: Test
-      run: dotnet test --no-restore --verbosity normal -s ./Tests/.runsettings --filter TestCategory=Bvt
+      run: dotnet test --no-restore --verbosity normal -s .\Tests\.runsettings --filter TestCategory=Bvt
+    - name: Code coverage
+      shell: cmd
+      env: 
+        CODECOV_UPLOAD_TOKEN: ${{ secrets.CodeCovUploadToken }}
+      run: |
+        .\packages\opencover\4.7.922\tools\OpenCover.Console.exe -register -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --no-restore --verbosity normal -s ./Tests/.runsettings --filter TestCategory=Bvt" -output:".\MyProject_coverage.xml" -oldstyle
+        .\packages\codecov\1.10.0\tools\codecov.exe -f ".\MyProject_coverage.xml" -t "%CODECOV_UPLOAD_TOKEN%"
