--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -21,12 +21,22 @@ jobs:
       run: dotnet restore --packages .\packages
     - name: Build
       run: dotnet build --configuration Release --no-restore
+    - name: Override TestRunParameters
+      shell: pwsh
+      env:
+        GOOGLE_API_KEY: ${{ secrets.GoogleApiKey }}
+        GOOGLE_SEARCH_ENGINE_ID: ${{ secrets.GoogleSearchEngineId }}
+      run: |
+        [xml]$runSettings = Get-Content .\Tests\.runsettings
+        $runSettings.RunSettings.TestRunParameters.ChildNodes.Where( {$_.name -eq "googleApiKey"} )[0].value = "$env:GOOGLE_API_KEY"
+        $runSettings.RunSettings.TestRunParameters.ChildNodes.Where( {$_.name -eq "googleSearchEngineId"} )[0].value = "$env:GOOGLE_SEARCH_ENGINE_ID"
+        $runSettings.Save(".\Tests\updated.runsettings")
     - name: Test
-      run: dotnet test --no-restore --verbosity normal -s .\Tests\.runsettings --filter TestCategory=Bvt
+      run: dotnet test --no-restore --verbosity normal -s .\Tests\updated.runsettings --filter TestCategory=Bvt
     - name: Code coverage
       shell: cmd
       env: 
         CODECOV_UPLOAD_TOKEN: ${{ secrets.CodeCovUploadToken }}
       run: |
-        .\packages\opencover\4.7.922\tools\OpenCover.Console.exe -register -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --no-restore --verbosity normal -s ./Tests/.runsettings --filter TestCategory=Bvt" -output:".\MyProject_coverage.xml" -oldstyle
+        .\packages\opencover\4.7.922\tools\OpenCover.Console.exe -register -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test --no-restore --verbosity normal -s ./Tests/updated.runsettings --filter TestCategory=Bvt" -output:".\MyProject_coverage.xml" -oldstyle
         .\packages\codecov\1.10.0\tools\codecov.exe -f ".\MyProject_coverage.xml" -t "%CODECOV_UPLOAD_TOKEN%"
